fix-search-results-link-overflow

--- a/src/amo/components/SearchResult/styles.scss
+++ b/src/amo/components/SearchResult/styles.scss
@@ -22,6 +22,7 @@ $icon-default-size: 32px;
   @include margin-end(8px);
 
   text-decoration: none;
+  word-break: break-word;
   word-wrap: anywhere;
 
   &,
